# RAG-Practical-Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: RAG查询优化-多查询与查询转换技术.ipynb  main.py  从零开始构建检索增强生成系统.ipynb
